# cmpi-bindings

./: .gitignore  ANNOUNCE  CMakeLists.txt  COPYING  ChangeLog  README  TODO  VERSION.cmake  cmpi-bindings.spec.cmake  install.sh  register.sh
cmake/modules/: FindRuby.cmake
doc/: INSTALL  INTERNALS  README
include/cmpi/: cmpimacs.h
mof/: CMakeLists.txt  Py_UnixProcess.mof  Py_UnixProcess.reg  Python_Example.mof  Python_Example.reg  Ruby_Example.mof  Ruby_Example.reg  Swig_Generic.mof  Swig_Generic.reg
package/: cmpi-bindings.changes  cmpi-bindings.spec.in
src/: CMakeLists.txt  cmpi_provider.c  cmpi_provider_python.c  cmpi_provider_ruby.c  target_perl.c  target_python.c  target_ruby.c
swig/: CMakeLists.txt  cmpi.i  cmpi_callbacks.i  cmpi_defs.i  cmpi_types.i  string_array.h
swig/perl/: CMakeLists.txt  cmpi-bindings.pl  cmpi_plwbem_bindings.pl
swig/perl/tests/: CMakeLists.txt  loading.pl
swig/python/: CMakeLists.txt  Py_UnixProcessProvider.py  cim_provider.py  cmpi_bindings.py  cmpi_pywbem_bindings.py  pycmpi_provider.py
swig/python/tests/: CMakeLists.txt  enum_instance_names.sh  get_all_instances.sh  get_single_instance.sh  loading.py
swig/python/tests/providers/: Test_NullArray.mof  Test_NullArray.reg
swig/ruby/: CMakeLists.txt  README.rdoc  cmpi-bindings.gemspec.in  cmpi.rb  cmpi_bindings.rb  cmpi_rbwbem_bindings.rb  extconf.rb  parse_swig.rb  rdoc  rdoc1_9.rb  rdoc2_0.rb  rdoc2_1.rb
swig/ruby/cmpi/: provider.rb
swig/ruby/test/: create.rb
swig/ruby/tests/: CMakeLists.txt  create.rb  loading.rb
swig/ruby/tests/providers/: sample_provider.rb
test/cmpi/: Makefile  README  Thing.mof  Thing.reg  ThingProvider.c
test/konkret/: Gadget.h  GadgetProvider.c  Makefile  README  Upcall.h  UpcallProvider.c  Widget.h  Widget.mof  Widget.reg  WidgetProvider.c  register.mof
test/perl/: TestAtomProvider.peg.reg  TestAtomProvider.reg  TestAtomProvider.sfcb.reg
test/python/: NullArray.peg.reg  NullArray.py  NullArray.sfcb.reg  README  TestAssoc.mof  TestAssocProvider-peg.reg  TestAssocProvider.peg.reg  TestAssocProvider.py  TestAssocProvider.reg  TestAssocProvider.sfcb.reg  TestAtom.mof  TestAtomProvider.peg.reg  TestAtomProvider.py  TestAtomProvider.reg  TestAtomProvider.sfcb.reg  TestAtomProvider_Test.py  TestExcept.mof  TestExcept.peg.reg  TestExcept.py  TestExcept.sfcb.reg  TestIndications.py  TestMethod.mof  TestMethod.peg.reg  TestMethod.py  TestMethod.reg  TestMethod.sfcb.reg  TestMethodPegasus.mof  TestMethod_Test.py  TestNullArray.py  UpcallAtom-peg.mof  UpcallAtom.mof  UpcallAtom.peg.reg  UpcallAtom.reg  UpcallAtom.sfcb.reg  UpcallAtomIndListener.py  UpcallAtomProvider.py  UpcallAtomTest.py  abuse.sh  deploy.mof  install.sh  (+4 more)
test/python/lib/: ProviderSanityTest.py  wbem_connection.py
test/rake/: README  Rakefile
test/rake/samples/mof/: LMI_Embedded.mof  RCP_ArrayDataTypes.mof  RCP_ClassMethod.mof  RCP_ComplexMethod.mof  RCP_ComputerSystem.mof  RCP_EmbeddedInstance.mof  RCP_EmbeddedInstanceArray.mof  RCP_EmbeddedObjectClass.mof  RCP_EmbeddedObjectClassArray.mof  RCP_EmbeddedObjectInstance.mof  RCP_EmbeddedObjectInstanceArray.mof  RCP_IndicationGenerator.mof  RCP_OSProcess.mof  RCP_OperatingSystem.mof  RCP_PassCData.mof  RCP_PhysicalMemory.mof  RCP_Processor.mof  RCP_RunningOS.mof  RCP_ShowContext.mof  RCP_SimpleClass.mof  RCP_SimpleDataTypes.mof  RCP_SimpleMethod.mof  RCP_UnixProcess.mof  qualifiers.mof
test/rake/samples/provider/: lmi_embedded.rb  rcp_array_data_types.rb  rcp_class_method.rb  rcp_complex_method.rb  rcp_computer_system.rb  rcp_embedded_instance.rb  rcp_embedded_instance_array.rb  rcp_embedded_object_class.rb  rcp_embedded_object_class_array.rb  rcp_embedded_object_instance.rb  rcp_embedded_object_instance_array.rb  rcp_operating_system.rb  rcp_os_process.rb  rcp_pass_c_data.rb  rcp_physical_memory.rb  rcp_processor.rb  rcp_running_os.rb  rcp_show_context.rb  rcp_simple_class.rb  rcp_simple_data_types.rb  rcp_simple_method.rb  rcp_unix_process.rb
test/rake/samples/registration/: LMI_Embedded.registration  RCP_ArrayDataTypes.registration  RCP_ClassMethod.registration  RCP_ComplexMethod.registration  RCP_ComputerSystem.registration  RCP_EmbeddedInstance.registration  RCP_EmbeddedInstanceArray.registration  RCP_EmbeddedObjectClass.registration  RCP_EmbeddedObjectClassArray.registration  RCP_EmbeddedObjectInstance.registration  RCP_EmbeddedObjectInstanceArray.registration  RCP_OperatingSystem.registration  RCP_PassCData.registration  RCP_PhysicalMemory.registration  RCP_Processor.registration  RCP_RunningOS.registration  RCP_ShowContext.registration  RCP_SimpleDataTypes.registration  RCP_SimpleMethod.registration  RCP_UnixProcess.registration
test/rake/samples/sfcb.reg/: RCP_ComputerSystem.reg  RCP_OSProcess.reg  RCP_OperatingSystem.reg  RCP_PhysicalMemory.reg  RCP_Processor.reg  RCP_RunningOS.reg  RCP_SimpleClass.reg  RCP_UnixProcess.reg
test/rake/tasks/: clean.rake  configuration.rake  pegasus.rake  prepstage.rake  registration.rake  sfcb.rake  test.rake
test/rake/test/: env.rb  helper.rb  mkreg.rb  pegasus.rb  registration.rb  sfcb.rb  test_lmi_embedded.rb  test_rcp_array_data_types.rb  test_rcp_class_method.rb  test_rcp_complex_method.rb  test_rcp_embedded_instance.rb  test_rcp_embedded_instance_array.rb  test_rcp_embedded_object_instance.rb  test_rcp_embedded_object_instance_array.rb  test_rcp_simple_data_types.rb  test_rcp_simple_method.rb
test/rake/test/mof/: RCP_ClassMethod.rb  RCP_ComplexMethod.rb  RCP_SimpleMethod.rb
test/ruby/: README  TestAssocProvider.sfcb.reg  TestAtomProvider.sfcb.reg  TestMethod.sfcb.reg  Test_Atom.rb  setup.sh  test_association_provider.rb  test_atom_provider.rb  test_instance_provider.rb  test_method_provider.rb
