#
#
#
SET( CMPI_LIBRARY_DIR /usr/lib/cmpi )
SET( CMPI_INCLUDE_DIR /usr/include/cmpi )
SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -g" )

SET(cmpi_provider_SRCS cmpi_provider.c)
ADD_DEFINITIONS(-DCMPI_PLATFORM_LINUX_GENERIC_GNU -DCMPI_VERSION=200)

ADD_LIBRARY(cmpi_provider SHARED ${cmpi_provider_SRCS})

INCLUDE_DIRECTORIES( ${CMPI_INCLUDE_DIR} )


#
# Ruby
#

ADD_DEFINITIONS(-DTARGET_RUBY)
MESSAGE(STATUS "Ruby executable: ${RUBY_EXECUTABLE}")
MESSAGE(STATUS "Ruby vendor arch dir: ${RUBY_VENDORARCH_DIR}")
MESSAGE(STATUS "Ruby include path: ${RUBY_INCLUDE_PATH}")

INCLUDE_DIRECTORIES( ${RUBY_INCLUDE_PATH} )
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/include/cmpi )

TARGET_LINK_LIBRARIES( cmpi_provider cmpi )
TARGET_LINK_LIBRARIES( cmpi_provider ${RUBY_LIBRARY} )
#
#
#

INSTALL(TARGETS cmpi_provider LIBRARY DESTINATION ${CMPI_LIBRARY_DIR} ARCHIVE DESTINATION ${CMPI_LIBRARY_DIR})
