#
# CMakeLists.txt for cmpi-bindings/swig
#

enable_testing()

FIND_PACKAGE(Ruby)
IF (RUBY_LIBRARY AND RUBY_INCLUDE_PATH)
  MESSAGE(STATUS "Building Ruby...")
  ADD_SUBDIRECTORY(ruby)
ENDIF (RUBY_LIBRARY AND RUBY_INCLUDE_PATH)

FIND_PACKAGE(PythonLibs)
IF (PYTHON_LIBRARY)
  FIND_PACKAGE(PythonInterp REQUIRED)
  MESSAGE(STATUS "Found PythonLibs...")
  FIND_PACKAGE(PythonLinkLibs)
  IF (PYTHON_LINK_LIBS)
    MESSAGE(STATUS "Building Python...")
    ADD_SUBDIRECTORY(python)
  ENDIF (PYTHON_LINK_LIBS)
ENDIF (PYTHON_LIBRARY)
